fix: Fixed misc code. Code cleanup. (#1471)
Signed-off-by: dhoard <doug.hoard@gmail.com>